finished home page and game UI sketetol

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@ body {
   font-family: 'Press Start 2P', cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  line-height: 1.5;
+}
+
+button,input{
+  font-family: 'Press Start 2P', cursive;
 }
 
 footer{
