--- a/src/components/GameLevel/GameLevel.module.css
+++ b/src/components/GameLevel/GameLevel.module.css
@@ -1,6 +1,6 @@
 .container{
-    height: 100vh;
     transition: background-color 2s linear;
+    border-bottom: 5px solid #060a0e;
 }
 .correct{
     background-color: #9af03d;
@@ -21,6 +21,8 @@
     height: 100vh;
     width: 900px;
     margin: 0 auto;
+    text-align: center;
+    justify-content: center;
 }
 @media (max-width:900px){
     .content{
