--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -3,4 +3,8 @@ footer{
     padding: 20px;
     background-color: #060a0e;
     color: #ffffff;
+    font-size: small;
+}
+footer a{
+    color: inherit;
 }
